Initial reporting from GenericChartPublisher